# Finance-Model-Research

./: .gitignore  test.py
.devcontainer/: docker-compose.yml
.devcontainer/environment/MoriMori/: dockerfile
.devcontainer/environment/Python/: dockerfile
.devcontainer/environment/standard/: dockerfile  pyproject.toml
.devcontainer/environment/standard/ta-lib/: Makefile  bin  config.status  libtool
.devcontainer/environment/standard/ta-lib/src/: Makefile
.devcontainer/environment/standard/ta-lib/src/.libs/: libta_lib.so.0.0.0
.devcontainer/environment/standard/ta-lib/src/ta_abstract/: Makefile
.devcontainer/environment/standard/ta-lib/src/ta_common/: Makefile
.devcontainer/environment/standard/ta-lib/src/ta_func/: Makefile
.devcontainer/environment/standard/ta-lib/src/tools/: Makefile
.devcontainer/environment/standard/ta-lib/src/tools/gen_code/: Makefile
.devcontainer/environment/standard/ta-lib/src/tools/ta_regtest/: Makefile  ta_regtest
.devcontainer/environment/standard/ta-lib/src/tools/ta_regtest/.libs/: ta_regtest
P2PChat/: Cargo.toml
P2PChat/src/: main.rs
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
crypto/: CryptoCatboostTest.py  CryptoCatboostTrain.py  PreProcess.py  add_technical.py  crypto_LSTM.py  crypto_catboost.py  crypto_xgboost_debug.py  preprocess.py  separate.py  vis_technical.py
crypto/old/: crypto_xgboost.py  test.py
crypto/opt/: bb_api.py  slack_notify.py  start.py
cryptocurrency/: test.py
download_script/: README  RSS_Scraping.py  daily.sh  daily_download.py  daily_execute.py  model_download.py  news_download.py  stock_data_download.py  stock_download.py  tdnet_download.py  test.py  yahoo-finance.py  yahoo-finance_test.py  yahoo_finance_download.py
research/: FineTuningBert_Aspect.py  FineTuningBert_Sentiment.py  FineTuningBert_pytorch.py  PredictionChatGPT_Aspect.py  PreditionBert_Aspect.py  test_bert.py  vis.py
research /rakuten_data/: data_spec_20210210.txt  release_note.txt
research_AspectR/: FineTuningBert_Aspect.py  FineTuningBert_Sentiment.py
research_SecuritiesReport/: SearchDocID.py  SearchTEXT.py  TransferLearningWithE5.py
research_SecuritiesReport/AnalysisbyIndustry/: test.py
src/: anlz_simple_ver2.py  embedding_news_vis.py  embedding_news_vis_mistral.py  standard_extract.py  tensor_vis.py  vis_sector.py  wide_extract.py
src/FeatureEngineering/: add_MA.py
src/bucktest/: bucktest1.py
src/preprocess/: standard_extract.py  wide_extract.py  wide_sector_extract.py
src/stock_prediction/: stock_prediction_Catboost.py
stock/: extract_company.py  memo.txt  tensor_vis.py  vis.py  yf2_check.py
stock/preprocess/: wide_sector_extract.py
