[tool.poetry]
name = "llama2"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
transformers = "^4.34.0"
peft = "^0.5.0"
trl = "^0.7.1"
scipy = "^1.11.3"
sentencepiece = "^0.1.99"
accelerate = "^0.23.0"
datasets = "^2.14.5"
torch = {version = "^2.1.0+cu121", source = "torch_cu121"}
tensorboard = "^2.14.1"
plotly = "^5.17.0"
ipython = "^8.16.1"
ipywidgets = "^7.0.0"
tqdm = "^4.66.1"
tyro = "^0.5.9"
bitsandbytes = "^0.41.1"
nltk = "^3.8.1"
pyldavis = "^3.4.1"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
jaconv = "^0.3.4"
collections2 = "^0.3.0"
sudachipy = "^0.6.7"
sudachidict-core = "^20230927"
h5py = "^3.10.0"
tables = "^3.9.1"
matplotlib = "^3.8.2"
torchtext = "^0.16.2"
sentence-transformers = "^2.2.2"
urllib3 = "^2.2.1"
python-dotenv = "^1.0.1"
mplfinance = "^0.12.10b0"
xgboost = "^2.0.3"
schedule = "^1.2.1"
pypdf = "^4.1.0"
feedparser = "^6.0.11"
newspaper3k = "^0.2.8"
yfinance = "^0.2.37"
yahoo-finance-api2 = "^0.0.12"
japanize-matplotlib = "^1.1.3"
ccxt = "^4.2.95"
ta-lib = "^0.4.28"
tensorflow = "^2.16.1"
keras = "^3.3.2"
optuna = "^3.6.1"
statsmodels = "^0.14.2"
optuna-dashboard = "^0.15.1"
catboost = "^1.2.5"
fugashi = "^1.3.2"
ipadic = "^1.0.0"
openai = "^1.34.0"
dirtyjson = "^1.0.8"
coarij = "^0.2.8"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


